infra/k8/system/common/system/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: traefik
  namespace: networking
spec:
  controllerName: traefik.io/gateway-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: traefik-gateway
  namespace: networking
spec:
  gatewayClassName: traefik
  listeners:
    - name: web
      port: 8000
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    - name: websecure
      port: 8443
      protocol: HTTPS
      hostname: api.staging.imdbgraph.org
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: imdbgraph-org-tls
            namespace: networking
      allowedRoutes:
        namespaces:
          from: All
